# careamics-seg-pop

./: pyproject.toml  segmentation.ipynb  segmentation_dsb_zarr.ipynb
src/careamics_seg/: configuration.py  loss.py  model.py
tests/: test_loss.py
