[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careamics_seg"]

[project]
name = "careamics-seg"
version = "0.1.0"
description = "Segmentation utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "careamics[examples]==0.0.19",
]

[dependency-groups]
# development dependencies and tooling
dev = [
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "sybil",      # doctesting
]


[tool.uv.sources]
careamics = { git = "https://github.com/CAREamics/careamics.git" }
